# VKR_MIREA

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_context_definition_to_vocabulary.py  0003_learning_graph_foundation.py  0004_learning_graph_relations.py  0005_base_lexicon.py  0006_vocabulary_definition_metadata.py
backend/app/: celery_app.py  main.py
backend/app/core/: api.py  application.py  config.py
backend/app/modules/ai_services/: chat_client.py  contracts.py  definition_resolver.py  exercise_generator.py  router.py  service.py  service_types.py  translation_service.py
backend/app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/modules/base_lexicon/: __init__.py  application_service.py  models.py  public_api.py  repository.py  seed_data.py
backend/app/modules/capture/: __init__.py  application_service.py  assembler.py  contracts.py  models.py  public_api.py  repository.py  router.py  schemas.py
backend/app/modules/context_memory/: application_service.py  (+8 more)
backend/app/tasks/: exercise_tasks.py  vocabulary_tasks.py
backend/data/: base_lexicon.britlex_5000_7000.json  base_lexicon.seed.json  pdf_parsed_preview.json  pdf_preview.txt
backend/tests/: conftest.py  test_api_smoke.py
backend/tools/: check_module_boundaries.py  import_base_lexicon.py
(+78 files in other folders)
